--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/asparagus.html">Oven Roasted Asparagus</a>
+            <ul>
+                <li><a href="recipes/asparagus.html">Oven Roasted Asparagus</a></li>
+                <li><a href="recipes/dutch-baby.html">Chef John's Blueberry Dutch Baby</a></li>
+               <!-- <li><a href=""></a></li> -->
+            </ul>    
     </body>
 </html>
