--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <ul>
                 <li><a href="recipes/asparagus.html">Oven Roasted Asparagus</a></li>
                 <li><a href="recipes/dutch-baby.html">Chef John's Blueberry Dutch Baby</a></li>
-               <!-- <li><a href=""></a></li> -->
+                <li><a href="recipes/casserole.html">Mamaw's Chicken and Rice Casserole</a></li>
             </ul>    
     </body>
 </html>
