--- a/recipes/dutch-baby.html
+++ b/recipes/dutch-baby.html
@@ -6,5 +6,66 @@
     </head>
     <body>
         <h1>Chef John's Blueberry Dutch Baby</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F12%2F15%2F8115434-chef-johns-blueberry-dutch-baby-photo-by-jill-2000.jpg" alt="Picture of Delicious Blueberry Dutch Baby">
+        <h2>Desription</h2>
+            <p>
+                You're in for a huge treat with this blueberry 
+                studded baked pancake--it's rich and satisfying 
+                but surprisingly light tasting. The true magic 
+                of a Dutch baby is the contrast of texture between 
+                the crispy, crusty outside and the soft, custardy, 
+                fruity center. This version is not only gorgeous and 
+                delicious, but it's fun and simple to make! There's 
+                no sugar in the batter, so all the sweetness comes 
+                from the berries and the powdered sugar. For a sweeter 
+                version, serve with maple syrup like regular blueberry pancakes.
+            </p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1/2 cup packed all-purpose flour</li>
+                <li>1/4 teaspoon fine salt</li>
+                <li>1/4 teaspoon pure vanilla extract</li>
+                <li>3 large eggs, at room temperature</li>
+                <li>2/3 cup milk, at room temperature</li>
+                <li>3 tablespoons clarified butter, melted</li>
+                <li>1/3 cup fresh blueberries, or more to taste</li>
+                <li>1 tablespoon unsalted butter, melted</li>
+                <li>1/2 Meyer lemon, juiced</li>
+                <li>2 tablesppons powdered sugar, or to taste</li>
+                <li>2 tablespoons maple syrup, or to taste (Optional)</li>
+            </ul>
+        <h2>
+            Steps
+        </h2>
+            <ol>
+                <li>
+                    Preheat the oven to 425 degrees F (220 degrees C).
+                </li>
+                <li>
+                    Combine flour, salt, vanilla extract, eggs, and milk 
+                    in a high-speed blender. Blend on high speed until 
+                    completely smooth and very thin, about 1 minute.
+                </li>
+                <li>
+                    Heat a 9- or 10-inch cast iron skillet over high heat. 
+                    Pour clarified butter into the skillet and use a pastry 
+                    brush to grease the sides. Heat butter until just 
+                    starting to smoke.
+                </li>
+                <li>
+                    Quickly and carefully pour the batter into the center of 
+                    the skillet, then sprinkle blueberries over top. Transfer 
+                    skillet to the center of the preheated oven and bake until 
+                    browned and nicely puffed, 20 to 25 minutes.
+                </li>
+                <li>
+                    Carefully remove from the oven and immediately brush the 
+                    top with melted butter. Squeeze lemon juice over top as 
+                    Dutch baby deflates. Dust with powdered sugar.
+                </li>
+                <li>
+                    Cut in wedges to serve and drizzle with maple syrup.
+                </li>
+            </ol>
     </body>
 </html>
